# template

./: .gitignore  README.md  pixi.toml
.github/workflows/: publish.yml
course-notes/: _quarto.yml  index.qmd
course-utils/: pyproject.toml
course-utils/src/course_utils/: __init__.py  example.py
